# data-driven-constitutive-modelling

./: .gitignore  README.md  din_lib.py  din_lib_anl.py  din_lib_gpt.cpp  file.txt  hello.cpp  hello.py  kalina.ipynb  model.py  p_k_2.py  pyproject.toml  requirements.txt  test onnix.ipynb
data/PDMS/: Compression_pdms.csv  Shear_pdms.csv  Tensile_pdms.csv
pretrained_models/: biaxial.joblib  full_extended_dpsi2.jbl  full_extended_dpsi2.pkl  uniaxial.joblib
src/CANN_torch/: GoreTex.ipynb  PDMS.ipynb  brain.ipynb  train_unit.py  trainer.py
src/CANN_torch/models/: CNN.py  Perceptron.py
src/CANN_torch/pretrained_models/: CNN1.pt  CNN1.pth  CNN_without_normalize.pt  experiment.pt  experiment.pth  experimental.pth
src/CANN_torch/utils/: analytical_metric.py  dataload.py  potential_zoo.py
src/QR_dd/: LU_strain.py
src/c++/: NN_response.cpp  inference.cpp  mlp.cpp
src/sklearn/: MLPRegressorWrapper.py  binn.ipynb  din_lib.py  din_lib_anl.py  hello.py  model.py  p_k_2.py
src/sklearn/pretrained_models/: biaxial_dpsi2.joblib  biaxial_three_different_holes_dpsi2.joblib  binn.joblib  full_extended.joblib  full_extended_dpsi2.joblib  model.joblib
src/sklearn/test/: binn.onnx  logreg_iris.onnx
src/torch/: analytical_validation.py  dataload.py  full_data_names.txt  model.py  one_data_names.txt  train_test.py  trainer.py
src/torch/models/: CNN.py  Perceptron.py
src/torch/pickle/: without_one.txt
src/torch/pretrained_models/: CNN2.pt  model_CANN.pth
src/torch/utils/: analytical_validation.py  dataload.py  visualisation.py
