[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CANN_torch"
version = "2024.04.1"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=1.26",
  "torch>=1.12",
  "torchvision>=0.15",
  "tqdm>=1.12",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "openpyxl>=3.1"
]
requires-python = ">=3.8"
authors = [
  {name = "Dits Daniil", email = "daniil.dits@gmail.com"},
]
maintainers = [
  {name = "Dits Daniil", email = "daniil.dits@gmail.com"}
]
description = "Automated model discovery of hyperelastic materials with pytorch"
readme = "README.md"
#license = {file = "LICENSE"}
keywords = ["data-driven", "soft tissue mechanics", "pinn"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
Repository = "https://github.com/23Grammer58/data-driven-constitutive-modelling"

[tool.hatch.build.targets.wheel]
packages = ["source/python/mutinfo"]